style.css
/* -------- Fonts ------- */

/* Thin */
@font-face {
	font-family: 'Lato';
	font-style: normal;
	font-weight: 100;
	src: local('Lato'),
		url('/fonts/Lato-Thin.ttf') format('ttf');
}

/* Regular */
@font-face {
	font-family: 'Lato';
	font-style: normal;
	font-weight: 400;
	src: local('Lato'),
		url('/fonts/Lato-Regular.ttf') format('ttf');
}

/* Bold */
@font-face {
	font-family: 'Lato';
	font-style: normal;
	font-weight: 700;
	src: local('Lato'),
		url('/fonts/Lato-Bold.ttf') format('ttf');
}

/* Black */
@font-face {
	font-family: 'Lato';
	font-style: normal;
	font-weight: 900;
	src: local('Lato'),
		url('/fonts/Lato-Black.ttf') format('ttf');
}

/* -------- Specification ------- */

body {
	font-family: 'Lato', sans-serif;
	font-size: 12px;
	color: #767e9e;
	margin: 0;
	padding: 0;
}

.wrapper {
	width: 940px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border: 5px solid red outset;
}

div, p, form, input, a, span, button {
	box-sizing: border-box;
}

div {
    overflow: hidden;
}

p {
    margin: 0;
    text-align: justify;
}

ul, li {
	display: block;
	margin: 0;
	padding: 0;
}

h1, h2, h3, h4, h5, h6 {
	padding: 0;
	margin: 0;
	font-weight: 900;
    line-height: 1.15em;
    color: #666d89;
}

h1 {
    font-size: 30px;
}

h2 {
    font-size: 18px;
}

a {
    text-decoration: none;
}

/* -------- header ------- */

.header {
    background-color: #2d303a;
    padding-top: 29px;
    padding-bottom: 29px;
    border-bottom: 6px solid #323746;
    text-transform: uppercase;
    font-weight: 400;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.logo {
    color: #fff;
    font-size: 25px;
}

.logo>span {
    color:#f06c64;
}

.header__navigation {
    padding-top: 7px;
}

.navigation {
    display: flex;
}

.navigation li a {
    color: #fff;
    font-style: 11px;
}

.navigation li a:hover {
    color: #f06c64;
}

.navigation li span{
    color: #494e62;
    padding-right: 12px;
    padding-left: 11px;
}

/* -------- phones ------- */

.slider {
    background-color:#f06c64;
    padding: 53px 0 57px;
    border-bottom: 6px solid #ea676b;
}

.phones {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.phone1 {
    margin-right: 74px;
}

.slider__icon_left, .slider__icon_right {
    border: 2px solid transparent;
    border-radius: 5px;
    padding: 5px;
}

.slider__icon_left:hover, .slider__icon_right:hover {
    border: 2px solid #c6c6c6;
}

/* -------- services ------- */

.services {
    background-color: #f2f2f2;
    padding-top: 61px;
    padding-bottom: 27px;
    border-bottom: 6px solid #fff;
}

.services .wrapper {
    display: block;
}

.services__text {
    font-size: 18px;
    line-height: 1.7em;
    letter-spacing: 0.0005em;
    font-weight: 300;
    padding-top: 20px;
    padding-bottom: 44px;
}

.services__items {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    flex-wrap: wrap;
}

.service {
    display: flex;
    justify-content: space-between;
    align-items: top;    
    padding-bottom: 28px;
    width: 300px;    
}

.service-icon {
    width: 59px;
    height: 59px;
    border: 2px solid #666d89;
    border-radius: 50%;
    display: flex;
}

.service-icon img {
    margin: auto;
}

.service__description {
    padding-left: 20px;
    padding-bottom: 11px;
    height: 95px; 
    width: 240px;
    text-align: justify;
}

.service-text {
    padding-top: 8px;
    line-height: 1.8em;   
    overflow-wrap: normal;  
}

